Fix footer spacing

--- a/fylo-landing-page-with-two-column-layout/css/style.css
+++ b/fylo-landing-page-with-two-column-layout/css/style.css
@@ -77,6 +77,32 @@ img {
 
 
 /**************************************
+ * Containers
+ **************************************/
+ .container {
+  width: 85%;
+  max-width: 1600px;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.container--row {
+  flex-direction: row;
+}
+
+.image-container {
+  max-width: 600px;
+}
+
+.image-container--small {
+  flex: 0.45;
+}
+
+
+/**************************************
  * Utility Classes
  **************************************/
 .left-align {
@@ -109,32 +135,6 @@ img {
 .align-start {
   align-items: flex-start;
   padding-inline: 1rem;
-}
-
-
-/**************************************
- * Containers
- **************************************/
- .container {
-  width: 85%;
-  max-width: 1600px;
-  margin: 0 auto;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-between;
-}
-
-.container--row {
-  flex-direction: row;
-}
-
-.image-container {
-  max-width: 600px;
-}
-
-.image-container--small {
-  flex: 0.45;
 }
 
 
@@ -222,7 +222,7 @@ img {
 .form__input,
 .form__button {
   border-radius: 0.2rem;
-  padding-block: 0.8rem;
+  padding-block: clamp(0.8rem, 3vw, 1rem);
   padding-inline: 1.25rem;
 }
 
@@ -263,7 +263,6 @@ img {
   padding-block: 0.5rem;
   padding-inline: clamp(0.5rem, 5vw, 2rem);
   font-size: 0.7rem;
-  
 }
 
 .form__input--thin {
@@ -429,6 +428,10 @@ img {
   color: var(--clr-light);
 }
 
+.main-footer__logo {
+  margin-top: 2.3rem;
+}
+
 .contact {
   margin-top: 2.5rem;
   display: flex;
@@ -464,9 +467,10 @@ img {
 }
 
 .social-links {
-  margin-top: 2.5rem;
+  margin-top: clamp(2.5rem, 3vw, 3rem);
   width: 100%;
-  column-gap: 0.5rem;
+  column-gap: clamp(0.5rem, 3vw, 1rem);
+  margin-top: 3rem;
 }
 
 .social-link {
@@ -587,11 +591,6 @@ img {
     flex: 0.33;
   }
 
-  .form__input,
-  .form__button {
-    padding-block: 1rem;
-  }
-
   .form__button--thin {
     width: max-content;
     margin-top: 1rem;
@@ -670,10 +669,5 @@ img {
   .sub-links + .sub-links {
     margin-top: 5.5rem;
     flex: 0.3;
-  }
-
-  .social-links {
-    column-gap: 1rem;
-    margin-top: 3rem;
   }
 }
